--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/TFI-CodeFellows/TFI-back-end#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5"
   }
 }
