--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^2.0.5"
+    "jwks-rsa": "^2.0.5",
+    "mongoose": "^6.3.0"
   }
 }
