--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
-
     "mongoose": "^6.3.0",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cache": "^5.1.2"
-
   }
 }
